--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
 
 <head>
@@ -12,7 +12,7 @@
   <table cellspacing="20">
 
     <tr>
-      <td><img src="C:\Users\SIGNET\Desktop\web develpmnet angela\fahad.jpg.jpg" width="200" height="200" alt=""></td>
+      <td><img src="fahad.jpg.jpg" width="200" height="200" alt=""></td>
       <td><h1>Fahad Thari</h1>
       <p><em>student at <strong>internet</strong></em></p>
       <p>i am a Data Scientist and Web developer, Iam very keen into delecious food</p></td>
